Use languageserver instead of coc-graphql

--- a/config/vim/coc-settings.json
+++ b/config/vim/coc-settings.json
@@ -9,5 +9,11 @@
     "javascript", "javascriptreact", "typescript", "typescriptreact", "graphql"
   ],
   "prettier.endOfLine": "auto",
-  "graphql.debug": false,
+  "languageserver": {
+    "graphql": {
+      "command": "graphql-lsp",
+      "args": ["server", "-m", "stream"],
+      "filetypes": ["typescript", "typescriptreact", "graphql"]
+    }
+  }
 }
