--- a/tmux.conf
+++ b/tmux.conf
@@ -36,6 +36,7 @@ bind -r k select-pane -U
 bind -r j select-pane -D 
 bind -r h select-pane -L 
 bind -r l select-pane -R 
+bind -r Tab switch-client -l
 
 # swap current pane with next / previous
 bind > swap-pane -D
