--- a/tmux.conf
+++ b/tmux.conf
@@ -56,7 +56,7 @@ unbind C-Right
 set -g status-position bottom
 set -g status-justify left
 set -g status-left ''
-set -g status-right '%m/%d %H:%M:%S '
+set -g status-right '%a %m/%d %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
