Updates to other dotfiles

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,6 +22,9 @@ set-option -g set-titles-string "#W"
 # vim-like keybindings
 set-window-option -g mode-keys vi
 
+# utility
+bind W new-window -n "vimwiki" "vim ~/.vim/wiki/raw/index.md"
+
 # copy / paste
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
