Add tmux scripts

--- a/tmux.conf
+++ b/tmux.conf
@@ -24,6 +24,8 @@ set-window-option -g mode-keys vi
 
 # utility
 bind W new-window -n "vimwiki" "vim ~/.vim/wiki/raw/index.md"
+bind S source-file "~/.tmux.conf"\; display-message "Sourced ~/.tmux.conf"
+bind R move-window -r\; display-message "Windows reordered"
 
 # copy / paste
 bind-key -T copy-mode-vi 'v' send -X begin-selection
