--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,7 @@
 
 # general
 set-option -g prefix C-b
+set-option -g prefix2 C-s
 set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
@@ -11,6 +12,7 @@ setw -g automatic-rename-format "#{b:pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+bind C-b last-window
 
 # display
 set -g default-terminal "xterm-256color"
