Update tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@
 
 # general
 set-option -g prefix C-b
-set-option -g prefix2 C-s
+set-option -g prefix2 M-Space
 set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
@@ -13,6 +13,7 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind C-b last-window
+set-option -g renumber-windows on
 
 # display
 set -g default-terminal "xterm-256color"
@@ -27,7 +28,6 @@ set-window-option -g mode-keys vi
 # utility
 bind W new-window -n "vimwiki" "vim ~/.vim/wiki/raw/index.md"
 bind S source-file "~/.tmux.conf"\; display-message "Sourced ~/.tmux.conf"
-bind R move-window -r\; display-message "Windows reordered"
 
 # copy / paste
 bind-key -T copy-mode-vi 'v' send -X begin-selection
@@ -79,5 +79,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
+set -g @resurrect-processes 'false'
 
 run '~/.tmux/plugins/tpm/tpm'
