Updates to tmux, gitconfig & zsh

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,8 +26,9 @@ set-option -g set-titles-string "#W"
 set-window-option -g mode-keys vi
 
 # utility
-bind W new-window -n "vimwiki" "vim ~/.vim/wiki/raw/index.md"
+# bind W new-window -n "vimwiki" "vim ~/.vim/wiki/raw/index.md"
 bind S source-file "~/.tmux.conf"\; display-message "Sourced ~/.tmux.conf"
+# bind W display-popup -E -w 80% -h 80% nvim -c ":Telescope tmux windows quit_on_select=true"
 
 # copy / paste
 bind-key -T copy-mode-vi 'v' send -X begin-selection
