Add custom "f" binding to tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -25,15 +25,9 @@ set-option -g set-titles-string "#W"
 # vim-like keybindings
 set-window-option -g mode-keys vi
 
-# utility
-# bind W new-window -n "vimwiki" "vim ~/.vim/wiki/raw/index.md"
-bind S source-file "~/.tmux.conf"\; display-message "Sourced ~/.tmux.conf"
-# bind W display-popup -E -w 80% -h 80% nvim -c ":Telescope tmux windows quit_on_select=true"
-
 # copy / paste
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
-
 
 # pane resizing, switching
 bind -r C-k resize-pane -U
@@ -50,7 +44,18 @@ bind -r Tab switch-client -l
 bind > swap-pane -D
 bind < swap-pane -U
 
-# unbind keys
+# re-source conf
+bind S source-file "~/.tmux.conf"\; display-message "Sourced ~/.tmux.conf"
+
+# send the same command to all panes/windows/sessions
+bind E command-prompt -p "Command:" \
+   "run \"tmux list-panes -a -F '##{session_name}:##{window_index}.##{pane_index}' \
+   | xargs -I PANE tmux send-keys -t PANE '%1' Enter\""
+
+# pick & switch to window with fzf
+bind f new-window -n "_tmux_select_window" "tmux list-windows -a -F '#S:#I #W' | grep -v _tmux_select_window | fzf --reverse --preview-window='down:75%' --preview='tmux capture-pane -p -t $(echo {}.0 | sed \"s/ .*//g\")' | sed 's/ .*//g' | xargs tmux switch-client -t"
+
+# unbind default keys
 unbind Up     
 unbind Down   
 unbind Left   
@@ -60,6 +65,7 @@ unbind C-Down
 unbind C-Left 
 unbind C-Right
 
+
 # statusbar
 set -g status-position bottom
 set -g status-justify left
@@ -67,11 +73,6 @@ set -g status-left ''
 set -g status-right '%a %m/%d %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
-
-# send the same command to all panes/windows/sessions
-bind E command-prompt -p "Command:" \
-   "run \"tmux list-panes -a -F '##{session_name}:##{window_index}.##{pane_index}' \
-   | xargs -I PANE tmux send-keys -t PANE '%1' Enter\""
 
 
 # plugins
