--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,14 @@
+# plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @continuum-restore 'on'
+set -g @resurrect-processes 'node'
+
+run '~/.tmux/plugins/tpm/tpm'
+
 # special thanks to: https://github.com/gpakosz/.tmux
 
 # general
@@ -65,22 +76,9 @@ unbind C-Down
 unbind C-Left 
 unbind C-Right
 
-
 # statusbar
 set -g status-position bottom
 set -g status-justify left
-set -g status-left ''
-set -g status-right '%a %m/%d %H:%M:%S '
+set -g status-right "#{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %a %m/%d #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold] %H:%M:%S "
 set -g status-right-length 50
 set -g status-left-length 20
-
-
-# plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on'
-set -g @resurrect-processes 'false'
-
-run '~/.tmux/plugins/tpm/tpm'
