--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,7 @@ set-option -g prefix2 M-Space
 set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
+set -g mouse on
 
 # window management
 setw -g automatic-rename-format "#{b:pane_current_path}"
@@ -35,6 +36,10 @@ set-option -g set-titles-string "#W"
 
 # vim-like keybindings
 set-window-option -g mode-keys vi
+
+# dim out inactive screens
+set -g window-active-style 'fg=terminal,bg=terminal'
+set -g window-style 'fg=terminal,bg=black'
 
 # copy / paste
 bind-key -T copy-mode-vi 'v' send -X begin-selection
